syntax = "proto3";

package api.content_moderation.v1;

option go_package = "ecommerce/api/content_moderation/v1;v1";

// ContentModerationService 定义了内容审核服务接口
service ContentModerationService {
  // 审核文本内容
  rpc ModerateText(ModerateTextRequest) returns (ModerateTextResponse);

  // 审核图片内容 (简化为URL)
  rpc ModerateImage(ModerateImageRequest) returns (ModerateImageResponse);
}

// ModerateTextRequest 审核文本内容请求
message ModerateTextRequest {
  string text = 1;
  string content_type = 2; // 内容类型，如 "review", "comment", "post"
  string user_id = 3; // 用户ID
}

// ModerateTextResponse 审核文本内容响应
message ModerateTextResponse {
  bool is_safe = 1;
  repeated string labels = 2; // 识别出的不安全标签，如 "SPAM", "OFFENSIVE"
  double confidence = 3; // 置信度
  string decision = 4; // 决策 (ALLOW, REVIEW, REJECT)
}

// ModerateImageRequest 审核图片内容请求
message ModerateImageRequest {
  string image_url = 1;
  string content_type = 2; // 内容类型，如 "product_image", "user_avatar"
  string user_id = 3; // 用户ID
}

// ModerateImageResponse 审核图片内容响应
message ModerateImageResponse {
  bool is_safe = 1;
  repeated string labels = 2; // 识别出的不安全标签
  double confidence = 3; // 置信度
  string decision = 4; // 决策 (ALLOW, REVIEW, REJECT)
}
